// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderPlanDag — M9 color-coded snapshots > case 1 vanilla build — all-skipped (non-TTY, symbols only) 1`] = `
"─── stage 0 ───    ───────── stage 1 ─────────    ─────── stage 1 ───────    ─── stage 3 ────

┌─────────────┐    ┌─────────────────────────┐    ┌─────────────────────┐    ┌──────────────┐
│ ⊘ build:pre │────│ ⊘ build:exec pkg-shared │────│ ⊘ build:exec db     │────│ ⊘ build:post │
└─────────────┘│   └─────────────────────────┘│   └─────────────────────┘│   └──────────────┘
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ⊘ build:exec api    │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ⊘ build:exec web    │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ⊘ build:exec worker │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────────│ ⊘ build:exec cron   │┘
                                                  └─────────────────────┘
"
`;

exports[`renderPlanDag — M9 color-coded snapshots > case 1 vanilla build — all-success (non-TTY, symbols only) 1`] = `
"─── stage 0 ───    ───────── stage 1 ─────────    ─────── stage 1 ───────    ─── stage 3 ────

┌─────────────┐    ┌─────────────────────────┐    ┌─────────────────────┐    ┌──────────────┐
│ ✓ build:pre │────│ ✓ build:exec pkg-shared │────│ ✓ build:exec db     │────│ ✓ build:post │
└─────────────┘│   └─────────────────────────┘│   └─────────────────────┘│   └──────────────┘
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ✓ build:exec api    │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ✓ build:exec web    │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ✓ build:exec worker │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────────│ ✓ build:exec cron   │┘
                                                  └─────────────────────┘
"
`;

exports[`renderPlanDag — M9 color-coded snapshots > case 1 vanilla build — mixed-failure (non-TTY, symbols only) 1`] = `
"─── stage 0 ───    ───────── stage 1 ─────────    ─────── stage 1 ───────    ─── stage 3 ────

┌─────────────┐    ┌─────────────────────────┐    ┌─────────────────────┐    ┌──────────────┐
│ ✘ build:pre │────│ ⊘ build:exec pkg-shared │────│ ⊘ build:exec db     │────│ ⊘ build:post │
└─────────────┘│   └─────────────────────────┘│   └─────────────────────┘│   └──────────────┘
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ⊘ build:exec api    │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ⊘ build:exec web    │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────┼───│ ⊘ build:exec worker │┘
               │                              │   └─────────────────────┘│
               │                              │                          │
               │                              │   ┌─────────────────────┐│
               └──────────────────────────────────│ ⊘ build:exec cron   │┘
                                                  └─────────────────────┘
"
`;

exports[`renderPlanDag — M9 color-coded snapshots > case 2 command check — all-skipped (non-TTY, symbols only) 1`] = `
"──── stage 0 ────    ──────── stage 1 ────────    ──────── stage 2 ────────    ──────── stage 3 ────────    ──── stage 4 ─────

┌───────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌────────────────┐
│ ⊘ command:pre │────│ ⊘ command:exec nopo   │────│ ⊘ command:exec nopo   │────│ ⊘ command:exec nopo   │────│ ⊘ command:post │
└───────────────┘│   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│   └────────────────┘
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec ui     │────│ ⊘ command:exec ui     │────│ ⊘ command:exec ui     │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec web    │────│ ⊘ command:exec web    │────│ ⊘ command:exec web    │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec api    │────│ ⊘ command:exec api    │────│ ⊘ command:exec api    │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec auth   │────│ ⊘ command:exec auth   │────│ ⊘ command:exec auth   │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec worker │────│ ⊘ command:exec worker │────│ ⊘ command:exec worker │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec broker │────│ ⊘ command:exec broker │────│ ⊘ command:exec broker │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec router │────│ ⊘ command:exec router │────│ ⊘ command:exec router │┘
                     └───────────────────────┘    └───────────────────────┘    └───────────────────────┘
"
`;

exports[`renderPlanDag — M9 color-coded snapshots > case 2 command check — all-success (non-TTY, symbols only) 1`] = `
"──── stage 0 ────    ──────── stage 1 ────────    ──────── stage 2 ────────    ──────── stage 3 ────────    ──── stage 4 ─────

┌───────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌────────────────┐
│ ✓ command:pre │────│ ✓ command:exec nopo   │────│ ✓ command:exec nopo   │────│ ✓ command:exec nopo   │────│ ✓ command:post │
└───────────────┘│   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│   └────────────────┘
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ✓ command:exec ui     │────│ ✓ command:exec ui     │────│ ✓ command:exec ui     │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ✓ command:exec web    │────│ ✓ command:exec web    │────│ ✓ command:exec web    │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ✓ command:exec api    │────│ ✓ command:exec api    │────│ ✓ command:exec api    │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ✓ command:exec auth   │────│ ✓ command:exec auth   │────│ ✓ command:exec auth   │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ✓ command:exec worker │────│ ✓ command:exec worker │────│ ✓ command:exec worker │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ✓ command:exec broker │────│ ✓ command:exec broker │────│ ✓ command:exec broker │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ✓ command:exec router │────│ ✓ command:exec router │────│ ✓ command:exec router │┘
                     └───────────────────────┘    └───────────────────────┘    └───────────────────────┘
"
`;

exports[`renderPlanDag — M9 color-coded snapshots > case 2 command check — mixed-failure (non-TTY, symbols only) 1`] = `
"──── stage 0 ────    ──────── stage 1 ────────    ──────── stage 2 ────────    ──────── stage 3 ────────    ──── stage 4 ─────

┌───────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌────────────────┐
│ ✘ command:pre │────│ ⊘ command:exec nopo   │────│ ⊘ command:exec nopo   │────│ ⊘ command:exec nopo   │────│ ⊘ command:post │
└───────────────┘│   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│   └────────────────┘
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec ui     │────│ ⊘ command:exec ui     │────│ ⊘ command:exec ui     │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec web    │────│ ⊘ command:exec web    │────│ ⊘ command:exec web    │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec api    │────│ ⊘ command:exec api    │────│ ⊘ command:exec api    │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec auth   │────│ ⊘ command:exec auth   │────│ ⊘ command:exec auth   │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec worker │────│ ⊘ command:exec worker │────│ ⊘ command:exec worker │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec broker │────│ ⊘ command:exec broker │────│ ⊘ command:exec broker │┘
                 │   └───────────────────────┘    └───────────────────────┘    └───────────────────────┘│
                 │                                                                                      │
                 │   ┌───────────────────────┐    ┌───────────────────────┐    ┌───────────────────────┐│
                 └───│ ⊘ command:exec router │────│ ⊘ command:exec router │────│ ⊘ command:exec router │┘
                     └───────────────────────┘    └───────────────────────┘    └───────────────────────┘
"
`;

exports[`renderPlanDag — M9 color-coded snapshots > case 3 pathological — all-skipped (non-TTY, symbols only) 1`] = `
"─── stage 0 ───    ──────── stage 1 ────────    ──────── stage 2 ────────    ────── stage 3 ───────    ────── stage 4 ───────    ─── stage 5 ────

┌─────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌────────────────────┐    ┌────────────────────┐    ┌──────────────┐
│ ⊘ build:pre │────│ ⊘ build:exec pkg-core │────│ ⊘ build:exec pkg-uti… │┐───│ ⊘ build:exec svc-b │────│ ⊘ build:exec svc-x │────│ ⊘ build:post │
└─────────────┘│   └───────────────────────┘│   └───────────────────────┘│   └────────────────────┘│   └────────────────────┘│   └──────────────┘
               │                            │                            │                         │                         │
               │                            │   ┌───────────────────────┐│   ┌────────────────────┐│   ┌────────────────────┐│
               └────────────────────────────┼───│ ⊘ build:exec pkg-typ… │┼───│ ⊘ build:exec svc-c │┼───│ ⊘ build:exec svc-y │┘
               │                            │   └───────────────────────┘│   └────────────────────┘│   └────────────────────┘│
               │                            │                            │                         │                         │
               │                            │                            │   ┌────────────────────┐│   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────┼───│ ⊘ build:exec svc-a │┘───│ ⊘ build:exec svc-z │┘
               │                                                         │   └────────────────────┘│   └────────────────────┘
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               │─────────────────────────────────────────────────────────┼───│ ⊘ build:exec svc-e ││
               │                                                         │   └────────────────────┘│
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────┼───│ ⊘ build:exec svc-d │┘
               │                                                         │   └────────────────────┘│
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────────│ ⊘ build:exec svc-f │┘
                                                                             └────────────────────┘
"
`;

exports[`renderPlanDag — M9 color-coded snapshots > case 3 pathological — all-success (non-TTY, symbols only) 1`] = `
"─── stage 0 ───    ──────── stage 1 ────────    ──────── stage 2 ────────    ────── stage 3 ───────    ────── stage 4 ───────    ─── stage 5 ────

┌─────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌────────────────────┐    ┌────────────────────┐    ┌──────────────┐
│ ✓ build:pre │────│ ✓ build:exec pkg-core │────│ ✓ build:exec pkg-uti… │┐───│ ✓ build:exec svc-b │────│ ✓ build:exec svc-x │────│ ✓ build:post │
└─────────────┘│   └───────────────────────┘│   └───────────────────────┘│   └────────────────────┘│   └────────────────────┘│   └──────────────┘
               │                            │                            │                         │                         │
               │                            │   ┌───────────────────────┐│   ┌────────────────────┐│   ┌────────────────────┐│
               └────────────────────────────┼───│ ✓ build:exec pkg-typ… │┼───│ ✓ build:exec svc-c │┼───│ ✓ build:exec svc-y │┘
               │                            │   └───────────────────────┘│   └────────────────────┘│   └────────────────────┘│
               │                            │                            │                         │                         │
               │                            │                            │   ┌────────────────────┐│   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────┼───│ ✓ build:exec svc-a │┘───│ ✓ build:exec svc-z │┘
               │                                                         │   └────────────────────┘│   └────────────────────┘
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               │─────────────────────────────────────────────────────────┼───│ ✓ build:exec svc-e ││
               │                                                         │   └────────────────────┘│
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────┼───│ ✓ build:exec svc-d │┘
               │                                                         │   └────────────────────┘│
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────────│ ✓ build:exec svc-f │┘
                                                                             └────────────────────┘
"
`;

exports[`renderPlanDag — M9 color-coded snapshots > case 3 pathological — mixed-failure (non-TTY, symbols only) 1`] = `
"─── stage 0 ───    ──────── stage 1 ────────    ──────── stage 2 ────────    ────── stage 3 ───────    ────── stage 4 ───────    ─── stage 5 ────

┌─────────────┐    ┌───────────────────────┐    ┌───────────────────────┐    ┌────────────────────┐    ┌────────────────────┐    ┌──────────────┐
│ ✘ build:pre │────│ ⊘ build:exec pkg-core │────│ ⊘ build:exec pkg-uti… │┐───│ ⊘ build:exec svc-b │────│ ⊘ build:exec svc-x │────│ ⊘ build:post │
└─────────────┘│   └───────────────────────┘│   └───────────────────────┘│   └────────────────────┘│   └────────────────────┘│   └──────────────┘
               │                            │                            │                         │                         │
               │                            │   ┌───────────────────────┐│   ┌────────────────────┐│   ┌────────────────────┐│
               └────────────────────────────┼───│ ⊘ build:exec pkg-typ… │┼───│ ⊘ build:exec svc-c │┼───│ ⊘ build:exec svc-y │┘
               │                            │   └───────────────────────┘│   └────────────────────┘│   └────────────────────┘│
               │                            │                            │                         │                         │
               │                            │                            │   ┌────────────────────┐│   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────┼───│ ⊘ build:exec svc-a │┘───│ ⊘ build:exec svc-z │┘
               │                                                         │   └────────────────────┘│   └────────────────────┘
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               │─────────────────────────────────────────────────────────┼───│ ⊘ build:exec svc-e ││
               │                                                         │   └────────────────────┘│
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────┼───│ ⊘ build:exec svc-d │┘
               │                                                         │   └────────────────────┘│
               │                                                         │                         │
               │                                                         │   ┌────────────────────┐│
               └─────────────────────────────────────────────────────────────│ ⊘ build:exec svc-f │┘
                                                                             └────────────────────┘
"
`;

exports[`renderPlanDag — snapshots > case 1: vanilla build with one shared package dep 1`] = `
"── stage 0 ──    ──────── stage 1 ────────    ────── stage 1 ──────    ── stage 3 ───

┌───────────┐    ┌───────────────────────┐    ┌───────────────────┐    ┌────────────┐
│ build:pre │────│ build:exec pkg-shared │────│ build:exec db     │────│ build:post │
└───────────┘│   └───────────────────────┘│   └───────────────────┘│   └────────────┘
             │                            │                        │
             │                            │   ┌───────────────────┐│
             └────────────────────────────┼───│ build:exec api    │┘
             │                            │   └───────────────────┘│
             │                            │                        │
             │                            │   ┌───────────────────┐│
             └────────────────────────────┼───│ build:exec web    │┘
             │                            │   └───────────────────┘│
             │                            │                        │
             │                            │   ┌───────────────────┐│
             └────────────────────────────┼───│ build:exec worker │┘
             │                            │   └───────────────────┘│
             │                            │                        │
             │                            │   ┌───────────────────┐│
             └────────────────────────────────│ build:exec cron   │┘
                                              └───────────────────┘
"
`;

exports[`renderPlanDag — snapshots > case 2: command check, per-task inner DAG (typecheck → lint → test) 1`] = `
"─── stage 0 ───    ─────── stage 1 ───────    ─────── stage 2 ───────    ─────── stage 3 ───────    ─── stage 4 ────

┌─────────────┐    ┌─────────────────────┐    ┌─────────────────────┐    ┌─────────────────────┐    ┌──────────────┐
│ command:pre │────│ command:exec nopo   │────│ command:exec nopo   │────│ command:exec nopo   │────│ command:post │
└─────────────┘│   └─────────────────────┘    └─────────────────────┘    └─────────────────────┘│   └──────────────┘
               │                                                                                │
               │   ┌─────────────────────┐    ┌─────────────────────┐    ┌─────────────────────┐│
               └───│ command:exec ui     │────│ command:exec ui     │────│ command:exec ui     │┘
               │   └─────────────────────┘    └─────────────────────┘    └─────────────────────┘│
               │                                                                                │
               │   ┌─────────────────────┐    ┌─────────────────────┐    ┌─────────────────────┐│
               └───│ command:exec web    │────│ command:exec web    │────│ command:exec web    │┘
               │   └─────────────────────┘    └─────────────────────┘    └─────────────────────┘│
               │                                                                                │
               │   ┌─────────────────────┐    ┌─────────────────────┐    ┌─────────────────────┐│
               └───│ command:exec api    │────│ command:exec api    │────│ command:exec api    │┘
               │   └─────────────────────┘    └─────────────────────┘    └─────────────────────┘│
               │                                                                                │
               │   ┌─────────────────────┐    ┌─────────────────────┐    ┌─────────────────────┐│
               └───│ command:exec auth   │────│ command:exec auth   │────│ command:exec auth   │┘
               │   └─────────────────────┘    └─────────────────────┘    └─────────────────────┘│
               │                                                                                │
               │   ┌─────────────────────┐    ┌─────────────────────┐    ┌─────────────────────┐│
               └───│ command:exec worker │────│ command:exec worker │────│ command:exec worker │┘
               │   └─────────────────────┘    └─────────────────────┘    └─────────────────────┘│
               │                                                                                │
               │   ┌─────────────────────┐    ┌─────────────────────┐    ┌─────────────────────┐│
               └───│ command:exec broker │────│ command:exec broker │────│ command:exec broker │┘
               │   └─────────────────────┘    └─────────────────────┘    └─────────────────────┘│
               │                                                                                │
               │   ┌─────────────────────┐    ┌─────────────────────┐    ┌─────────────────────┐│
               └───│ command:exec router │────│ command:exec router │────│ command:exec router │┘
                   └─────────────────────┘    └─────────────────────┘    └─────────────────────┘
"
`;

exports[`renderPlanDag — snapshots > case 3: pathological cross-stage edges and heavy fan-in 1`] = `
"── stage 0 ──    ─────── stage 1 ───────    ─────── stage 2 ────────    ───── stage 3 ──────    ───── stage 4 ──────    ── stage 5 ───

┌───────────┐    ┌─────────────────────┐    ┌──────────────────────┐    ┌──────────────────┐    ┌──────────────────┐    ┌────────────┐
│ build:pre │────│ build:exec pkg-core │────│ build:exec pkg-utils │┐───│ build:exec svc-b │────│ build:exec svc-x │────│ build:post │
└───────────┘│   └─────────────────────┘│   └──────────────────────┘│   └──────────────────┘│   └──────────────────┘│   └────────────┘
             │                          │                           │                       │                       │
             │                          │   ┌──────────────────────┐│   ┌──────────────────┐│   ┌──────────────────┐│
             └──────────────────────────┼───│ build:exec pkg-types │┼───│ build:exec svc-c │┼───│ build:exec svc-y │┘
             │                          │   └──────────────────────┘│   └──────────────────┘│   └──────────────────┘│
             │                          │                           │                       │                       │
             │                          │                           │   ┌──────────────────┐│   ┌──────────────────┐│
             └──────────────────────────────────────────────────────┼───│ build:exec svc-a │┘───│ build:exec svc-z │┘
             │                                                      │   └──────────────────┘│   └──────────────────┘
             │                                                      │                       │
             │                                                      │   ┌──────────────────┐│
             │──────────────────────────────────────────────────────┼───│ build:exec svc-e ││
             │                                                      │   └──────────────────┘│
             │                                                      │                       │
             │                                                      │   ┌──────────────────┐│
             └──────────────────────────────────────────────────────┼───│ build:exec svc-d │┘
             │                                                      │   └──────────────────┘│
             │                                                      │                       │
             │                                                      │   ┌──────────────────┐│
             └──────────────────────────────────────────────────────────│ build:exec svc-f │┘
                                                                        └──────────────────┘
"
`;
